# custodiam-book

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
adrs/: index.html
adrs/adr-001-polyrepo/: index.html
adrs/adr-002-sqlmodel/: index.html
adrs/adr-003-alembic/: index.html
adrs/adr-004-http-cliente/: index.html
adrs/adr-005-sqflite/: index.html
adrs/adr-006-nginx-alpine/: index.html
adrs/adr-007-ghcr/: index.html
adrs/adr-008-psycopg3/: index.html
adrs/adr-009-2-bds-separadas/: index.html
adrs/adr-010-oauth-pkce-keycloak/: index.html
adrs/adr-011-deep-links/: index.html
adrs/adr-012-riverpod/: index.html
adrs/adr-013-rbac-lockstep/: index.html
adrs/adr-014-result-failure/: index.html
adrs/adr-015-env-config/: index.html
adrs/adr-016-dev-log/: index.html
adrs/adr-017-splash-app-startup/: index.html
adrs/adr-018-design-system/: index.html
adrs/adr-019-sops-age/: index.html
adrs/adr-020-tres-modos-despliegue/: index.html
adrs/adr-021-smtp-resend/: index.html
adrs/adr-022-ios-15/: index.html
adrs/adr-023-oauth-web-asimetria/: index.html
adrs/adr-024-patrol-e2e/: index.html
adrs/adr-025-modelo-extensible/: index.html
adrs/adr-026-uv/: index.html
adrs/adr-027-mkdocs-pages/: index.html
adrs/adr-028-valuekeys-tests/: index.html
arquitectura/: index.html
contribuir/: index.html
docs/: CNAME  glosario.md  index.md
empezar/: index.html
glosario/: index.html
guias/: index.html
hooks/: glosario.py
search/: search_index.json
(+66 files in other folders)
