[project]
name = "custodiam-book"
version = "0.1.0"
description = "Documentación pública del proyecto Custodiam — book con Material for MkDocs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Rodrigo Mulero" },
    { name = "Marcos Val Sanz" },
]
dependencies = [
    "mkdocs-material>=9.5.0",
    "mkdocs-mermaid2-plugin>=1.2.0",
    "mike>=2.1.0",
    "pymdown-extensions>=10.13.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "mkdocs-d2-plugin>=1.7.0",
]
